force-app/main/default/objects/Case/fields/CCR_ClosingReason__c.field-meta.xml
<CustomField>
    <fullName>CCR_ClosingReason__c</fullName>
    <label>Closing Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CCR_ProgrmStage__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Closed - Wrong enrollment</fullName>
            </value>
            <value>
                <fullName>Closed - Invalid number</fullName>
            </value>
            <value>
                <fullName>Closed - Not reached after three attempts</fullName>
            </value>
            <value>
                <fullName>Drop out - Didn&apos;t like IQOS, doesn&apos;t want contact</fullName>
            </value>
            <value>
                <fullName>Drop out - Doesn&apos;t want to be disturbed</fullName>
            </value>
            <value>
                <fullName>Drop out - Interim milestone not achieved</fullName>
            </value>
            <value>
                <fullName>Completed - 2 stages (choose one below)</fullName>
            </value>
            <value>
                <fullName>Completed - 3 stages (choose one below)</fullName>
            </value>
            <value>
                <fullName>Qoach program already exists</fullName>
            </value>
            <value>
                <fullName>Closed -  Invalid number</fullName>
                <isActive>false</isActive>
                <label>Closed -  Invalid number</label>
            </value>
            <value>
                <fullName>Closed -  Not reached after  three attempts</fullName>
                <isActive>false</isActive>
                <label>Closed -  Not reached after  three attempts</label>
            </value>
            <value>
                <fullName>Closed -  Wrong enrollment</fullName>
                <isActive>false</isActive>
                <label>Closed -  Wrong enrollment</label>
            </value>
            <value>
                <fullName>Drop out -  Didn&apos;t like IQOS, doesn&apos;t want contact</fullName>
                <isActive>false</isActive>
                <label>Drop out -  Didn&apos;t like IQOS, doesn&apos;t want contact</label>
            </value>
            <value>
                <fullName>Drop out -  Doesn&apos;t want  to be disturbed</fullName>
                <isActive>false</isActive>
                <label>Drop out -  Doesn&apos;t want  to be disturbed</label>
            </value>
            <value>
                <fullName>Drop out -  Interim milestone not achieved</fullName>
                <isActive>false</isActive>
                <label>Drop out -  Interim milestone not achieved</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>