force-app/main/default/objects/Case/fields/CCR_ConsumableComplaintReason__c.field-meta.xml
<CustomField>
    <fullName>CCR_ConsumableComplaintReason__c</fullName>
    <description>Used by CCR
Description: The reason by which the customer reported complaints e.g Missing, Dirty</description>
    <label>Consumable Complaint Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CCR_UnitOfMeasure__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Damaged</fullName>
            </value>
            <value>
                <fullName>Extra</fullName>
            </value>
            <value>
                <fullName>Missing</fullName>
            </value>
            <value>
                <fullName>Sensory / Functionality / Other</fullName>
            </value>
            <value>
                <fullName>Smeared / Dirty</fullName>
            </value>
            <value>
                <fullName>Wrong</fullName>
            </value>
            <value>
                <fullName>Crashed / Broken</fullName>
            </value>
            <value>
                <fullName>Functionality / Sensory / Experience</fullName>
            </value>
            <value>
                <fullName>null</fullName>
            </value>
            <value>
                <fullName>(Pack)Extra</fullName>
            </value>
            <value>
                <fullName>(Pack)Smeared / Dirty</fullName>
            </value>
            <value>
                <fullName>(Pack)Wrong</fullName>
            </value>
            <value>
                <fullName>(Pack)Damaged</fullName>
            </value>
            <value>
                <fullName>(Pack)Missing</fullName>
            </value>
            <value>
                <fullName>(Pack)Sensory / Functionality / Other</fullName>
            </value>
            <value>
                <fullName>(Carton)Missing</fullName>
            </value>
            <value>
                <fullName>(Carton)Smeared / Dirty</fullName>
            </value>
            <value>
                <fullName>(Carton)Damaged</fullName>
            </value>
            <value>
                <fullName>(Carton)Wrong</fullName>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
            <value>
                <fullName>(Piece)Wrong</fullName>
            </value>
            <value>
                <fullName>(Piece)Missing</fullName>
            </value>
            <value>
                <fullName>(Piece)Extra</fullName>
            </value>
            <value>
                <fullName>(Piece)Damaged</fullName>
            </value>
            <value>
                <fullName>(Piece)Sensory / Functionality / Other</fullName>
            </value>
            <value>
                <fullName>(Piece)Smeared / Dirty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>