force-app/main/default/objects/Case/fields/CCR_ContactType__c.field-meta.xml
<CustomField>
    <fullName>CCR_ContactType__c</fullName>
    <description>Created so the call center agent do not see the picklist of the queue from the other countries</description>
    <label>Case Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone</fullName>
                <default>true</default>
                <label>Phone</label>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Webpage</fullName>
            </value>
            <value>
                <fullName>Chat</fullName>
            </value>
            <value>
                <fullName>Kakao Chat</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>In person - Direct Retail</fullName>
            </value>
            <value>
                <fullName>In person - Indirect Retail</fullName>
            </value>
            <value>
                <fullName>Self-Service - QURE</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Self Service - iREFER</fullName>
            </value>
            <value>
                <fullName>Consumer Engagement</fullName>
                <isActive>false</isActive>
                <label>Consumer Engagement</label>
            </value>
            <value>
                <fullName>Electronical Form</fullName>
                <isActive>false</isActive>
                <label>Electronical Form</label>
            </value>
            <value>
                <fullName>FC -1800 telephone number</fullName>
                <isActive>false</isActive>
                <label>FC -1800 telephone number</label>
            </value>
            <value>
                <fullName>FX -Facsimile</fullName>
                <isActive>false</isActive>
                <label>FX -Facsimile</label>
            </value>
            <value>
                <fullName>Face to Face</fullName>
                <isActive>false</isActive>
                <label>Face to Face</label>
            </value>
            <value>
                <fullName>Flagship Store</fullName>
                <isActive>false</isActive>
                <label>Flagship Store</label>
            </value>
            <value>
                <fullName>I -Inbound</fullName>
                <isActive>false</isActive>
                <label>I -Inbound</label>
            </value>
            <value>
                <fullName>In person</fullName>
                <isActive>false</isActive>
                <label>In person</label>
            </value>
            <value>
                <fullName>Letter</fullName>
                <isActive>false</isActive>
                <label>Letter</label>
            </value>
            <value>
                <fullName>O -Outbound</fullName>
                <isActive>false</isActive>
                <label>O -Outbound</label>
            </value>
            <value>
                <fullName>OB -Outbound Call</fullName>
                <isActive>false</isActive>
                <label>OB -Outbound Call</label>
            </value>
            <value>
                <fullName>Self-Service – QURE</fullName>
                <isActive>false</isActive>
                <label>Self-Service – QURE</label>
            </value>
            <value>
                <fullName>TS -TSM</fullName>
                <isActive>false</isActive>
                <label>TS -TSM</label>
            </value>
            <value>
                <fullName>Voicemail</fullName>
                <isActive>false</isActive>
                <label>Voicemail</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>