force-app/main/default/objects/Case/fields/CCR_ConversionInformation__c.field-meta.xml
<CustomField>
    <fullName>CCR_ConversionInformation__c</fullName>
    <label>Conversion Information</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fully Converted (95% - 100%) OR ONLY HEETS</fullName>
            </value>
            <value>
                <fullName>Predominant (70% - 94.99%) OR HEETS &gt; CC</fullName>
            </value>
            <value>
                <fullName>Situational IQOS (40% - 69.99%) OR HEETS = CC</fullName>
            </value>
            <value>
                <fullName>Situational CC (5% - 39.99%) OR HEETS &lt; CC</fullName>
            </value>
            <value>
                <fullName>Abandoner (0% - 4.99%) OR ONLY CC</fullName>
            </value>
            <value>
                <fullName>Prefer not to say</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>