force-app/main/default/objects/Case/fields/CCR_CycleCount__c.field-meta.xml
<CustomField>
    <fullName>CCR_CycleCount__c</fullName>
    <description>Cycle it shows how many times the device has been used. Numeric manual input.</description>
    <label>Cycle Count</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>