force-app/main/default/objects/Case/fields/CCR_DeviceCodentify__c.field-meta.xml
<CustomField>
    <fullName>CCR_DeviceCodentify__c</fullName>
    <description>Unique identifier of the device to be used as external key. Autopopulate Codentify of the selected Asset</description>
    <formula>HYPERLINK(&quot;/&quot;&amp;Asset.Id,Asset.CCR_CodentifyId__c)</formula>
    <label>Device Codentify</label>
    <type>Text</type>
</CustomField>