force-app/main/default/objects/Case/fields/CCR_DeviceLine__c.field-meta.xml
<CustomField>
    <fullName>CCR_DeviceLine__c</fullName>
    <description>Used by: CCR 
Description:This Field is used to store the Device Versions of IQOS.</description>
    <label>Product  Line</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CCR_GlobalDeviceLine</valueSetName>
    </valueSet>
</CustomField>