force-app/main/default/objects/Case/fields/CCR_DiagnosticDescription__c.field-meta.xml
<CustomField>
    <fullName>CCR_DiagnosticDescription__c</fullName>
    <description>Used By: CCR
Description: This field stores the diagnostic descriptive information and is populated during Qure process</description>
    <label>Diagnostic Description</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CCR_DiagnosticDescription</valueSetName>
    </valueSet>
</CustomField>