force-app/main/default/objects/Case/fields/CCR_EnrollmentMethod__c.field-meta.xml
<CustomField>
    <fullName>CCR_EnrollmentMethod__c</fullName>
    <label>Enrollment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct Retail</fullName>
            </value>
            <value>
                <fullName>Indirect Retail</fullName>
            </value>
            <value>
                <fullName>Ecommerce</fullName>
            </value>
            <value>
                <fullName>Field Sales Force</fullName>
            </value>
            <value>
                <fullName>Customer Service Center</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>