force-app/main/default/objects/Case/fields/CCR_fm_BrandDifferentiatorAIT__c.field-meta.xml
<CustomField>
    <fullName>CCR_fm_BrandDifferentiatorAIT__c</fullName>
    <formula>CCR_ProductVariant__r.CCR_Differentiator__c</formula>
    <label>Brand Differentiator</label>
    <type>Text</type>
</CustomField>