force-app/main/default/objects/Case/fields/CCR_fm_BrandFamilyAIT__c.field-meta.xml
<CustomField>
    <fullName>CCR_fm_BrandFamilyAIT__c</fullName>
    <formula>TEXT(CCR_ProductVariant__r.Family)</formula>
    <label>Brand Family</label>
    <type>Text</type>
</CustomField>