force-app/main/default/objects/Case/fields/CCR_GlobalDeviceLine__c.field-meta.xml
<CustomField>
    <fullName>CCR_GlobalDeviceLine__c</fullName>
    <description>Used by: CCR
Description:This Field is used to store the Device Versions of IQOS.</description>
    <label>Global Device Line</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CCR_GlobalDeviceLine</valueSetName>
    </valueSet>
</CustomField>