force-app/main/default/objects/Case/fields/CCR_HomeCountry__c.field-meta.xml
<CustomField>
    <fullName>CCR_HomeCountry__c</fullName>
    <description>Home country of consumer, exported from contact</description>
    <formula>TEXT(Contact.CCR_CountryID__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Home Country</label>
    <type>Text</type>
</CustomField>