force-app/main/default/objects/Case/fields/CCR_Inbound_Outbound__c.field-meta.xml
<CustomField>
    <fullName>CCR_Inbound_Outbound__c</fullName>
    <label>Inbound/Outbound</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>