force-app/main/default/objects/Case/fields/CCR_InspectionCloseDate__c.field-meta.xml
<CustomField>
    <fullName>CCR_InspectionCloseDate__c</fullName>
    <description>Updated with timestamp when Inspector Push a TRIGGER BUTTON calles &quot;Close Inspection&quot;</description>
    <label>Inspection Close Date</label>
    <type>DateTime</type>
</CustomField>