force-app/main/default/objects/Case/fields/CCR_InspectionCreationDate__c.field-meta.xml
<CustomField>
    <fullName>CCR_InspectionCreationDate__c</fullName>
    <description>TO BE CREATED WITH A Timestamp when TRIGGER BUTTON CALLED &quot;Start Inspection&quot;- 
to be verified the type of data format available in SF to be compatible in GCRS</description>
    <label>Inspection Creation Date</label>
    <type>DateTime</type>
</CustomField>