force-app/main/default/objects/Case/fields/CCR_InspectorName__c.field-meta.xml
<CustomField>
    <fullName>CCR_InspectorName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the inspector .This Field will be auto populate based in the user logged in with the value in the field title - Inspector</description>
    <label>Inspector Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>