force-app/main/default/objects/Case/fields/CCR_IsTheConversionJourneyFinalized__c.field-meta.xml
<CustomField>
    <fullName>CCR_IsTheConversionJourneyFinalized__c</fullName>
    <label>Is The Conversion Journey Finalized</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>