force-app/main/default/objects/Case/fields/CCR_OrderID__c.field-meta.xml
<CustomField>
    <fullName>CCR_OrderID__c</fullName>
    <description>Manually populated by Agent with Order ID copied from demandware</description>
    <label>Order ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>