force-app/main/default/objects/Case/fields/CCR_ProductFamily__c.field-meta.xml
<CustomField>
    <fullName>CCR_ProductFamily__c</fullName>
    <description>Used By: CCR
Description: Used to store the Product Family values</description>
    <label>Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Device</fullName>
            </value>
            <value>
                <fullName>Consumable</fullName>
            </value>
            <value>
                <fullName>Accessory</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>