force-app/main/default/objects/Case/fields/CCR_ProductGeneration__c.field-meta.xml
<CustomField>
    <fullName>CCR_ProductGeneration__c</fullName>
    <description>Used by CCR
Description: The generation of device e.g 2.4, 3.0M</description>
    <label>Product Generation</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CCR_SubType__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>G20</fullName>
            </value>
            <value>
                <fullName>2.4</fullName>
            </value>
            <value>
                <fullName>2.4 PLUS</fullName>
            </value>
            <value>
                <fullName>3.0</fullName>
            </value>
            <value>
                <fullName>3.0M</fullName>
            </value>
            <value>
                <fullName>3.1</fullName>
            </value>
            <value>
                <fullName>3 DUO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>