force-app/main/default/objects/Case/fields/CCR_ProductionDateTime__c.field-meta.xml
<CustomField>
    <fullName>CCR_ProductionDateTime__c</fullName>
    <description>Used by: CCR
Description: This field will be use for Production Date Time</description>
    <label>Production Date Time</label>
    <type>DateTime</type>
</CustomField>