force-app/main/default/objects/Case/fields/CCR_ProductionDateTimeLocal__c.field-meta.xml
<CustomField>
    <fullName>CCR_ProductionDateTimeLocal__c</fullName>
    <formula>TEXT(CCR_ProductionDateTime__c + (CCR_LocalProductionTimeOffset__c/1440))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Production Date Time(Local)</label>
    <type>Text</type>
</CustomField>