force-app/main/default/objects/Case/fields/CCR_ProductionDateTimeUTC__c.field-meta.xml
<CustomField>
    <fullName>CCR_ProductionDateTimeUTC__c</fullName>
    <formula>TEXT( DATETIMEVALUE( CCR_ProductionDateTime__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Production Date Time(UTC)</label>
    <type>Text</type>
</CustomField>