force-app/main/default/objects/Case/fields/CCR_ProductionLineCodeFromPack__c.field-meta.xml
<CustomField>
    <fullName>CCR_ProductionLineCodeFromPack__c</fullName>
    <label>Production Line Code (FromPack)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>