force-app/main/default/objects/Case/fields/CCR_ProductVariant__c.field-meta.xml
<CustomField>
    <fullName>CCR_ProductVariant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Variant</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>