force-app/main/default/objects/Case/fields/CCR_ProgrmStage__c.field-meta.xml
<CustomField>
    <fullName>CCR_ProgrmStage__c</fullName>
    <label>Program Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enrollment Request</fullName>
            </value>
            <value>
                <fullName>Welcome Call</fullName>
            </value>
            <value>
                <fullName>Feedback Call 1</fullName>
            </value>
            <value>
                <fullName>Feedback Call 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>