force-app/main/default/objects/Case/fields/CCR_QADirtinessLevel__c.field-meta.xml
<CustomField>
    <fullName>CCR_QADirtinessLevel__c</fullName>
    <description>Examples are: L1, L2, L3</description>
    <label>QA Dirtiness Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>L1</fullName>
            </value>
            <value>
                <fullName>L2</fullName>
            </value>
            <value>
                <fullName>L3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>