force-app/main/default/objects/Case/fields/CCR_QAResultL1__c.field-meta.xml
<CustomField>
    <fullName>CCR_QAResultL1__c</fullName>
    <description>Examples are:
A - L0 OK &amp; L2 inspection required
B - L0 NOK &amp; L2 inspection required
C - L0 OK &amp; Disposal
D - L0 NOK &amp; Disposal</description>
    <label>QA Result L1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A -  L0 OK and L2 inspection required</fullName>
            </value>
            <value>
                <fullName>B  - L0 NOK and L2 inspection required</fullName>
            </value>
            <value>
                <fullName>C  - L0 OK and Disposal</fullName>
            </value>
            <value>
                <fullName>D  - L0 NOK and Disposal</fullName>
            </value>
            <value>
                <fullName>A -  L0 OK &amp; L2 inspection required</fullName>
                <isActive>false</isActive>
                <label>A -  L0 OK &amp; L2 inspection required</label>
            </value>
            <value>
                <fullName>B  - L0 NOK &amp; L2 inspection required</fullName>
                <isActive>false</isActive>
                <label>B  - L0 NOK &amp; L2 inspection required</label>
            </value>
            <value>
                <fullName>C  - L0 OK &amp; Disposal</fullName>
                <isActive>false</isActive>
                <label>C  - L0 OK &amp; Disposal</label>
            </value>
            <value>
                <fullName>D  - L0 NOK &amp; Disposal</fullName>
                <isActive>false</isActive>
                <label>D  - L0 NOK &amp; Disposal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>