force-app/main/default/objects/Case/fields/CCR_QAStatus__c.field-meta.xml
<CustomField>
    <fullName>CCR_QAStatus__c</fullName>
    <description>(O)pen, (C)lose
Different to Case Status. If Open will keep QA record open. If Close will close QA record. QA Closed Date is populated with QA status Changed.</description>
    <label>QA Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>