force-app/main/default/objects/Case/fields/CCR_QASubject__c.field-meta.xml
<CustomField>
    <fullName>CCR_QASubject__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The code is selected but in table the Subject ID is saved from the Subject master table.</description>
    <label>QA Subject</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CCR_Localization__c.CCR_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CCR_Localization__c</referenceTo>
    <relationshipLabel>Cases (QA Subject)</relationshipLabel>
    <relationshipName>CasesQAS</relationshipName>
    <type>Lookup</type>
</CustomField>