force-app/main/default/objects/Case/fields/CCR_QASubjectDescription__c.field-meta.xml
<CustomField>
    <fullName>CCR_QASubjectDescription__c</fullName>
    <description>Read only, autopopulated based on the subject code selected.</description>
    <formula>CCR_QASubject__r.CCR_Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QA Subject Description</label>
    <type>Text</type>
</CustomField>